--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!------ CSS ------>
+    <link href="./css/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="header">
+            <h3 class="greeting">HELLO!</h3>
+            <h2 class="name">I'm <span class="orange-text"></span></h2>
+            <p class="intro-text">I'm a Frontend developer & UI/UX designer. Lorem ipsum dolor <br>sit amet, consectetur adipiscing elit.</p>
+        </div>
     
+        <div class="nav-bar">
+            <div class="icon">
+                <img src="./icons/avatar-twohome.png">
+            </div>
+            <div class="icon">
+                <img src="./icons/avatar-twohome.png">
+            </div>
+            <div class="icon">
+                <img src="./icons/avatar-twohome.png">
+            </div>
+            <div class="icon">
+                <img src="./icons/avatar-twohome.png">
+            </div>
+            <div class="icon">
+                <img src="./icons/avatar-twohome.png">
+            </div>
+            <div class="icon">
+                <img src="./icons/avatar-twohome.png">
+            </div>
+            <div class="icon">
+                <img src="./icons/avatar-twohome.png">
+            </div>
+        </div>
+    </div>
+    
+
+   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+   <script src="./js/script.js"></script>
 </body>
 </html>
