Personnel Details included
Personnel Details included with profile picture 27-12-2022

--- a/index.html
+++ b/index.html
@@ -18,25 +18,44 @@
     
         <div class="nav-bar">
             <div class="icon">
-                <img src="./icons/avatar-twohome.png">
+                <img src="./icons/port-home.png">
             </div>
             <div class="icon">
-                <img src="./icons/avatar-twohome.png">
+                <img src="./icons/port-profile.png">
             </div>
             <div class="icon">
-                <img src="./icons/avatar-twohome.png">
+                <img src="./icons/port-briefcase.png">
             </div>
             <div class="icon">
-                <img src="./icons/avatar-twohome.png">
+                <img src="./icons/port-gallery.png">
             </div>
             <div class="icon">
-                <img src="./icons/avatar-twohome.png">
+                <img src="./icons/port-star.png">
             </div>
             <div class="icon">
-                <img src="./icons/avatar-twohome.png">
+                <img src="./icons/port-calendar.png">
             </div>
             <div class="icon">
-                <img src="./icons/avatar-twohome.png">
+                <img src="./icons/port-invoice.png">
+            </div>
+        </div>
+
+        <div class="profile">
+            <img src="./images/profile3.jpeg" class="profile-picture">
+            <div class="profile-content">
+                <div class="profile-content-intro">
+                    <h1>PROFILE</h1>
+                    <p>My name is Brain Wilson. I am a Professional UI/UX designer and frontend developer. 
+                       I have taken part in developing UDesign theme, one of the most famous theme in the world.
+                       Everyone can make website easily with UDesign, which offers various options and also make your site speed fast.
+                    </p>
+                    <div class="view-more">
+                        <a class="view-link"><span class="view-text">VIEW MORE&nbsp;</span><img src="./icons/port-down.png" class="more-icon"></a>
+                    </div>
+                </div>
+                <div class="profile-content-detail">
+                    <h3>General Info</h3>
+                </div>
             </div>
         </div>
     </div>
