--- a/index.html
+++ b/index.html
@@ -1,66 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!------ CSS ------>
-    <link href="./css/style.css" rel="stylesheet">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!------ CSS ------>
+<link href="./css/style.css" rel="stylesheet">
+<title>Portfolio Project</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h3 class="greeting">HELLO!</h3>
-            <h2 class="name">I'm <span class="orange-text"></span></h2>
-            <p class="intro-text">I'm a Frontend developer & UI/UX designer. Lorem ipsum dolor <br>sit amet, consectetur adipiscing elit.</p>
-        </div>
-    
-        <div class="nav-bar">
-            <div class="icon">
-                <img src="./icons/port-home.png">
-            </div>
-            <div class="icon">
-                <img src="./icons/port-profile.png">
-            </div>
-            <div class="icon">
-                <img src="./icons/port-briefcase.png">
-            </div>
-            <div class="icon">
-                <img src="./icons/port-gallery.png">
-            </div>
-            <div class="icon">
-                <img src="./icons/port-star.png">
-            </div>
-            <div class="icon">
-                <img src="./icons/port-calendar.png">
-            </div>
-            <div class="icon">
-                <img src="./icons/port-invoice.png">
-            </div>
-        </div>
+<div class="container">
+<div class="header">
+    <h3 class="greeting">HELLO!</h3>
+    <h2 class="name">I'm <span class="orange-text"></span></h2>
+    <p class="intro-text">I'm a Frontend developer & UI/UX designer. A Nigerian Female Lead<br> Technological Ambassador and Youth Innovator.</p>
+</div>
 
-        <div class="profile">
-            <img src="./images/profile3.jpeg" class="profile-picture">
-            <div class="profile-content">
-                <div class="profile-content-intro">
-                    <h1>PROFILE</h1>
-                    <p>My name is Brain Wilson. I am a Professional UI/UX designer and frontend developer. 
-                       I have taken part in developing UDesign theme, one of the most famous theme in the world.
-                       Everyone can make website easily with UDesign, which offers various options and also make your site speed fast.
-                    </p>
-                    <div class="view-more">
-                        <a class="view-link"><span class="view-text">VIEW MORE&nbsp;</span><img src="./icons/port-down.png" class="more-icon"></a>
-                    </div>
+<div class="navbar" id="navbar">
+    <div class="icon">
+        <img src="./icons/port-home.png">
+    </div>
+    <div class="icon">
+        <img src="./icons/port-profile.png">
+    </div>
+    <div class="icon">
+        <img src="./icons/port-briefcase.png">
+    </div>
+    <div class="icon">
+        <img src="./icons/port-gallery.png">
+    </div>
+    <div class="icon">
+        <img src="./icons/port-star.png">
+    </div>
+    <div class="icon">
+        <img src="./icons/port-calendar.png">
+    </div>
+    <div class="icon">
+        <img src="./icons/port-invoice.png">
+    </div>
+</div>
+
+<div class="profile">
+    <img src="./images/profile3.jpeg" class="profile-picture">
+    <div class="profile-content">
+        <div class="profile-content-intro">
+            <h1>PROFILE</h1>
+            <p>My name is Brain Wilson. I am a Professional UI/UX designer and frontend developer. 
+                I have taken part in developing UDesign theme, one of the most famous theme in the world.
+                Everyone can make website easily with UDesign, which offers various options and also make your site speed fast.
+            </p>
+            <div class="view-more">
+                <a class="view-link"><span class="view-text">VIEW MORE&nbsp;</span><img src="./icons/port-down.png" class="more-icon"></a>
+            </div>
+        </div>
+        <div class="profile-content-detail">
+            <h3>General Info</h3>
+            <div class="detail-row">
+                <div class="first-detail">
+                    <div><label>Name:</label>Stanley Francess</div>
+                    <div><label>Birthday:</label>Aug 17, 2000</div>
+                    <div><label>Marital:</label>Single</div>
                 </div>
-                <div class="profile-content-detail">
-                    <h3>General Info</h3>
+                <div class="second-detail">
+                    <div><label>Nationality:</label>Nigerian</div>
+                    <div><label>E-mail:</label>stanleyjanefrancess@gmail.com</div>
+                    <div><label>Phone:</label>+234 8167 5094 17</div>
                 </div>
             </div>
+            <i class="fi fi-sr-marker"></i>
         </div>
     </div>
+</div>
+</div>
 
-   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-   <script src="./js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
