Social media info
Social media section styled but unlinked.
28-12-2022

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Portfolio Project</title>
 <!------ CSS ------>
 <link href="./css/style.css" rel="stylesheet">
-<title>Portfolio Project</title>
+<script src="https://use.fontawesome.com/35ec4113bb.js"></script>
 </head>
 <body>
 <div class="container">
@@ -18,29 +19,29 @@
 
 <div class="navbar" id="navbar">
     <div class="icon">
-        <img src="./icons/port-home.png">
+        <a href="#" class="home"><img src="./icons/port-home.png" ></a>
     </div>
     <div class="icon">
-        <img src="./icons/port-profile.png">
+        <a href="#"><img src="./icons/port-profile.png"></a>
     </div>
     <div class="icon">
-        <img src="./icons/port-briefcase.png">
+       <a href="#"><img src="./icons/port-briefcase.png"></a>
     </div>
     <div class="icon">
-        <img src="./icons/port-gallery.png">
+        <a href="#"><img src="./icons/port-gallery.png"></a>
     </div>
     <div class="icon">
-        <img src="./icons/port-star.png">
+        <a href="#"><img src="./icons/port-star.png"></a>
     </div>
     <div class="icon">
-        <img src="./icons/port-calendar.png">
+        <a href="#"><img src="./icons/port-calendar.png"></a>
     </div>
     <div class="icon">
-        <img src="./icons/port-invoice.png">
+        <a href="#"><img src="./icons/port-invoice.png"></a>
     </div>
 </div>
 
-<div class="profile">
+<div class="profile" id="profile">
     <img src="./images/profile3.jpeg" class="profile-picture">
     <div class="profile-content">
         <div class="profile-content-intro">
@@ -60,6 +61,12 @@
                     <div><label>Name:</label>Stanley Francess</div>
                     <div><label>Birthday:</label>Aug 17, 2000</div>
                     <div><label>Marital:</label>Single</div>
+                    <div class="socials-group">
+                        <a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="#" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="#" class="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    </div>
                 </div>
                 <div class="second-detail">
                     <div><label>Nationality:</label>Nigerian</div>
@@ -67,7 +74,7 @@
                     <div><label>Phone:</label>+234 8167 5094 17</div>
                 </div>
             </div>
-            <i class="fi fi-sr-marker"></i>
+            
         </div>
     </div>
 </div>
