--- a/index.html
+++ b/index.html
@@ -11,75 +11,121 @@
 </head>
 <body>
 <div class="container">
-<div class="header">
-    <h3 class="greeting">HELLO!</h3>
-    <h2 class="name">I'm <span class="orange-text"></span></h2>
-    <p class="intro-text">I'm a Frontend developer & UI/UX designer. A Nigerian Female Lead<br> Technological Ambassador and Youth Innovator.</p>
+<div class="section header" id="home">
+<h3 class="greeting">HELLO!</h3>
+<h2 class="name">I'm <span class="orange-text"></span></h2>
+<p class="intro-text">I'm a Frontend Web Developer & UI/UX designer. A Nigerian Female Lead<br> Technological Ambassador and Youth Innovator.</p>
 </div>
 
 <div class="navbar" id="navbar">
-    <div class="icon">
-        <a href="#" class="home"><img src="./icons/port-home.png" ></a>
-    </div>
-    <div class="icon">
-        <a href="#"><img src="./icons/port-profile.png"></a>
-    </div>
-    <div class="icon">
-       <a href="#"><img src="./icons/port-briefcase.png"></a>
-    </div>
-    <div class="icon">
-        <a href="#"><img src="./icons/port-gallery.png"></a>
-    </div>
-    <div class="icon">
-        <a href="#"><img src="./icons/port-star.png"></a>
-    </div>
-    <div class="icon">
-        <a href="#"><img src="./icons/port-calendar.png"></a>
-    </div>
-    <div class="icon">
-        <a href="#"><img src="./icons/port-invoice.png"></a>
-    </div>
+<div class="icon">
+  <a href="#home"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
 </div>
-
-<div class="profile" id="profile">
-    <img src="./images/profile3.jpeg" class="profile-picture">
-    <div class="profile-content">
-        <div class="profile-content-intro">
-            <h1>PROFILE</h1>
-            <p>My name is Brain Wilson. I am a Professional UI/UX designer and frontend developer. 
-                I have taken part in developing UDesign theme, one of the most famous theme in the world.
-                Everyone can make website easily with UDesign, which offers various options and also make your site speed fast.
-            </p>
-            <div class="view-more">
-                <a class="view-link"><span class="view-text">VIEW MORE&nbsp;</span><img src="./icons/port-down.png" class="more-icon"></a>
-            </div>
-        </div>
-        <div class="profile-content-detail">
-            <h3>General Info</h3>
-            <div class="detail-row">
-                <div class="first-detail">
-                    <div><label>Name:</label>Stanley Francess</div>
-                    <div><label>Birthday:</label>Aug 17, 2000</div>
-                    <div><label>Marital:</label>Single</div>
-                    <div class="socials-group">
-                        <a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                        <a href="#" class="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    </div>
-                </div>
-                <div class="second-detail">
-                    <div><label>Nationality:</label>Nigerian</div>
-                    <div><label>E-mail:</label>stanleyjanefrancess@gmail.com</div>
-                    <div><label>Phone:</label>+234 8167 5094 17</div>
-                </div>
-            </div>
-            
-        </div>
-    </div>
+<div class="icon">
+  <a href="#profile"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+</div>
+<div class="icon">
+  <a href="#tech"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+</div>
+<div class="icon">
+  <a href="#portfolio"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+</div>
+<div class="icon">
+  <a href="#testimonial"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+</div>
+<div class="icon">
+  <a href="#certification"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+</div>
+<div class="icon">
+  <a href="#footer"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
 </div>
 </div>
 
+<div class="section profile" id="profile">
+<div class="profile-section">
+    <img src="./images/main.webp" class="profile-picture">
+</div>
+<div class="profile-content">
+   <div class="profile-content-intro">
+       <h1>PROFILE</h1>
+       <p class="description">My name is Stanley Francess. I am a Professional UI/UX designer and frontend developer. 
+           I have taken part in developing UDesign theme, one of the most famous theme in the world.
+          Everyone can make website easily with UDesign, which offers various options and also make your site speed fast.
+       </p>
+       <div class="view-more">
+          <a class="view-link"><span class="view-text">VIEW MORE&nbsp;</span><img src="./icons/port-down.png" class="more-icon"></a>
+      </div>
+</div>
+<div class="profile-content-detail">
+    <h3>General Info</h3>
+    <div class="detail-row">
+        <div class="first-detail">
+            <div><label>Name:</label>Stanley Francess</div>
+            <div><label>Birthday:</label>Aug 17, 2000</div>
+            <div><label>Marital:</label>Single</div>
+            <div class="socials-group">
+                <a href="#" class="facebook"><i class="fab fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="#" class="twitter"><i class="fab fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="#" class="instagram"><i class="fab fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="#" class="linkedin"><i class="fab fa fa-linkedin" aria-hidden="true"></i></a>
+            </div>
+        </div>
+        <div class="second-detail">
+            <div><label>Nationality:</label>Nigerian</div>
+            <div><label>E-mail:</label>stanleyjanefrancess@gmail.com</div>
+            <div><label>Phone:</label>+234 8167 5094 17</div>
+        </div>
+    </div>
+    
+</div>
+</div>
+</div>
+
+<div class="section tech" id="tech">
+    <img src="./images/orange-bg.jpg" class="side-image">
+    <div class="tech-content">
+        <h1>Tech Expertise</h1>
+        <div class="tech-stack">
+            <img src="./images/circle.png">
+            <img src="./images/circle.png">
+            <img src="./images/circle.png">
+            <img src="./images/circle.png">
+            <img src="./images/circle.png">
+            <img src="./images/circle.png">
+        </div>
+    </div>
+</div>
+
+<div class="section portfolio" id="portfolio">
+   <h1>PORTFOLIO</h1>
+   <div class="scrollby">
+      <ul>
+          <li>All</li>
+          <li>Web Design</li>
+          <li>UI/UX</li>
+      </ul>
+   </div>
+   <div class="project-display">
+      <div class="project"><img src="./images/project3.jpg"></div>
+      <div class="project"><img src="./images/project2.jpg"></div>
+      <div class="project"><img src="./images/project3.jpg"></div>
+      <div class="project"><img src="./images/project3.jpg"></div>
+      <div class="project"><img src="./images/project2.jpg"></div>
+      <div class="project"><img src="./images/project3.jpg"></div>
+   </div>
+</div>
+
+<div class="section testimonial" id="testimonial"></div>
+
+<div class="section certification" id="certification">
+ <div class="first-cert"><img src="./images/aws2.jpg"></div>
+  <div class="second-cert"><img src="./images/aws2.jpg"></div>
+  <div class="third-cert"><img src="./images/aws2.jpg"></div>
+</div>
+
+<div class="section footer" id="footer"></div>
+
+</div>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="./js/script.js"></script>
 </body>
