--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Portfolio Project</title>
 <!------ CSS ------>
 <link href="./css/style.css" rel="stylesheet">
-<script src="https://use.fontawesome.com/35ec4113bb.js"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/320ee0437b.css">
 </head>
 <body>
 <div class="container">
@@ -22,22 +22,22 @@
   <a href="#home"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
 </div>
 <div class="icon">
-  <a href="#profile"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+  <a href="#profile"><i class="nav-fab fa fa-user" aria-hidden="true"></i></a>
 </div>
 <div class="icon">
-  <a href="#tech"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+  <a href="#tech"><i class="nav-fab fa fa-code" aria-hidden="true"></i></a>
 </div>
 <div class="icon">
-  <a href="#portfolio"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+  <a href="#portfolio"><i class="nav-fab fa fa-briefcase" aria-hidden="true"></i></a>
 </div>
 <div class="icon">
-  <a href="#testimonial"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+  <a href="#testimonial"><i class="nav-fab fa fa-light fa-star" aria-hidden="true"></i></a>
 </div>
 <div class="icon">
-  <a href="#certification"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+  <a href="#certification"><i class="nav-fab fa fa-certificate" aria-hidden="true"></i></a>
 </div>
 <div class="icon">
-  <a href="#footer"><i class="nav-fab fa fa-home" aria-hidden="true"></i></a>
+  <a href="#footer"><i class="nav-fab fa fa-envelope" aria-hidden="true"></i></a>
 </div>
 </div>
 
