--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@
     <div class="tech-content">
         <h1>Tech Expertise</h1>
         <div class="tech-stack">
-            <img src="./images/circle.png">
-            <img src="./images/circle.png">
-            <img src="./images/circle.png">
-            <img src="./images/circle.png">
-            <img src="./images/circle.png">
-            <img src="./images/circle.png">
+            <img src="./images/html.png">
+            <img src="./images/css.png">
+            <img src="./images/javascript.png">
+            <img src="./images/react.png">
+            <img src="./images/tailwind.png">
+            <img src="./images/github.png">
+            <img src="./images/node.png">
+            <img src="./images/nextjs.png">
         </div>
     </div>
 </div>
