--- a/index.html
+++ b/index.html
@@ -115,12 +115,42 @@
       </ul>
    </div>
    <div class="project-display">
-      <div class="project"><img src="./images/html-project.png"></div>
-      <div class="project"><img src="./images/React-project.png"></div>
-      <div class="project"><img src="./images/project3.jpg"></div>
-      <div class="project"><img src="./images/project3.jpg"></div>
-      <div class="project"><img src="./images/project2.jpg"></div>
-      <div class="project"><img src="./images/project3.jpg"></div>
+      <div class="project">
+        <img src="./images/html-project.png">
+        <div class="pro-btnn-group">
+          <button class="pro-btnn">Demo</button> <button class="pro-btnn">Code</button>
+        </div>
+      </div>
+      <div class="project">
+        <img src="./images/React-project.png">
+        <div class="pro-btnn-group">
+          <button class="pro-btnn">Demo</button> <button class="pro-btnn">Code</button>
+        </div>
+      </div>
+      <div class="project">
+        <img src="./images/heybassh-moduler.png">
+        <div class="pro-btnn-group">
+          <button class="pro-btnn">Demo</button> <button class="pro-btnn">Code</button>
+        </div>
+      </div>
+      <div class="project">
+        <img src="./images/React-project.png">
+        <div class="pro-btnn-group">
+          <button class="pro-btnn">Demo</button> <button class="pro-btnn">Code</button>
+        </div>
+      </div>
+      <div class="project">
+        <img src="./images/html-project.png">
+        <div class="pro-btnn-group">
+          <button class="pro-btnn">Demo</button> <button class="pro-btnn">Code</button>
+        </div>
+      </div>
+      <div class="project">
+        <img src="./images/heybassh-moduler.png">
+        <div class="pro-btnn-group">
+          <button class="pro-btnn">Demo</button> <button class="pro-btnn">Code</button>
+        </div>
+      </div>
    </div>
 </div>
 
