reponsivesness on major screen sizes

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <div class="container">
 <div class="section header" id="home">
 <h3 class="greeting">HELLO!</h3>
+<h2 class="medium-text"><b class="bold-text">I'm</b> Stanley Chiamaka Francess</h2>
 <h2 class="name">I'm <span class="orange-text"></span></h2>
-<p class="intro-text">I'm a Frontend Web Developer & UI/UX designer. A Nigerian Female Lead<br> Technological Ambassador and Youth Innovator.</p>
+<p class="intro-text">A Frontend Web Developer & UI/UX designer. A Nigerian Female Lead<br> Technological Ambassador and Youth Innovator.</p>
 <div class="cv-download">
   <button class="cv-btnn">Download Cv</button>
 </div>
@@ -107,13 +108,6 @@
 
 <div class="section portfolio" id="portfolio">
    <h1>PORTFOLIO</h1>
-   <div class="scrollby">
-      <ul>
-          <li>All</li>
-          <li>Web Design</li>
-          <li>UI/UX</li>
-      </ul>
-   </div>
    <div class="project-display">
       <div class="project">
         <img src="./images/html-project.png">
