sticky bar on all screen

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="first-detail">
             <div><label>Name:</label>Stanley Francess</div>
             <div><label>Birthday:</label>Aug 17, 2000</div>
-            <div><label>Marital:</label>Single</div>
+            <div><label>Occupation</label>Web developer</div>
             <div class="socials-group">
                 <a href="#" class="facebook"><i class="fab fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="#" class="twitter"><i class="fab fa fa-twitter" aria-hidden="true"></i></a>
@@ -81,7 +81,7 @@
         <div class="second-detail">
             <div><label>Nationality:</label>Nigerian</div>
             <div><label>E-mail:</label>stanleyjanefrancess@gmail.com</div>
-            <div><label>Phone:</label>+234 8167 5094 17</div>
+            <div><label>Phone:</label>+2348167509417</div>
         </div>
     </div>
     
