--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="second-detail">
             <div><label>Nationality:</label>Nigerian</div>
             <div><label>E-mail:</label>stanleyjanefrancess@gmail.com</div>
-            <div><label>Phone:</label>+2348167509417</div>
+            <div class="phone-num"><label>Phone:</label>+2348167509417</div>
         </div>
     </div>
     
