--- a/index.html
+++ b/index.html
@@ -112,19 +112,22 @@
       <div class="project">
         <img src="./images/html-project.png">
         <div class="pro-btnn-group">
-          <button class="pro-btnn">Demo</button> <button class="pro-btnn">Code</button>
+          <a href="https://stanleyport.vercel.app"><button class="pro-btnn">Demo</button></a>
+          <a href="https://github.com/Janefrancess/My-Portfolio"> <button class="pro-btnn">Code</button></a>
         </div>
       </div>
       <div class="project">
         <img src="./images/React-project.png">
         <div class="pro-btnn-group">
-          <button class="pro-btnn">Demo</button> <button class="pro-btnn">Code</button>
+          <a href="https://stanley-chi.vercel.app"><button class="pro-btnn">Demo</button></a>
+          <a href="https://github.com/Janefrancess/React-Sample-Portfolio"><button class="pro-btnn">Code</button></a>
         </div>
       </div>
       <div class="project">
         <img src="./images/heybassh-moduler.png">
         <div class="pro-btnn-group">
-          <button class="pro-btnn">Demo</button> <button class="pro-btnn">Code</button>
+          <a href="https://heybassh.com"><button class="pro-btnn">Demo</button></a> 
+          <a href="https://github.com/Janefrancess"><button class="pro-btnn">Code</button></a>
         </div>
       </div>
       <div class="project">
