updated personal info

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="detail-row">
         <div class="first-detail">
             <div><label>Name:</label>Stanley Francess</div>
-            <div><label>Birthday:</label>Aug 17, 2000</div>
+            <div><label>Zone</label>Hybid/Remote</div>
             <div><label>Occupation</label>Web developer</div>
             <div class="socials-group">
                 <a href="#" class="facebook"><i class="fab fa fa-facebook" aria-hidden="true"></i></a>
@@ -80,7 +80,7 @@
         </div>
         <div class="second-detail">
             <div><label>Nationality:</label>Nigerian</div>
-            <div><label>E-mail:</label>stanleyjanefrancess@gmail.com</div>
+            <div><label>E-mail:</label>stanleychya@gmail.com</div>
             <div><label>Phone:</label>+234 8167 5094 17</div>
         </div>
     </div>
