--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="detail-row">
         <div class="first-detail">
             <div><label>Name:</label>Stanley Francess</div>
-            <div><label>Zone</label>Hybid/Remote</div>
+            <div><label>  Work zone</label>Hybid/Remote</div>
             <div><label>Occupation</label>Web developer</div>
             <div class="socials-group">
                 <a href="#" class="facebook"><i class="fab fa fa-facebook" aria-hidden="true"></i></a>
